--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@ body {
   background-color: #131215;
 }
 
-.dashboard{
+.dashboard {
   background-color: #1d1e22;
 }
 
-.dashboard img{
+.dashboard img {
   padding: 10px;
   width: 100px;
   margin: 0;
@@ -50,7 +50,29 @@ body {
   transform: translateY(-10px);
 }
 
-
 .items:hover .img-wrapper img {
   transform: translateY(5px);
+}
+
+/* SECCION CONTACTO */
+.contacto {
+  background-color: #1d1e22;
+  padding: 140px 0 100px 0;
+  color: #e6e6e6;
+  text-align: center;
+}
+.contacto .contenido-seccion {
+  max-width: 1000px;
+  margin: auto;
+  padding: 0 10x;
+}
+.contacto .contenido-seccion .fila {
+  display: flex;
+  justify-content: space-around;
+}
+.contacto .contenido-seccion .fila .col {
+  margin-top: 50px;
+}
+.contacto .contenido-seccion .fila .col h2 {
+  color: #0000ff;
 }
