--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 *{
     margin: 0;
     padding: 0;
@@ -6,7 +7,7 @@
   }
   body{
     min-height: 100vh;
-    background: url(https://blog.bitso.com/wp-content/uploads/2023/10/cuales-son-las-criptomonedas-mas-populares.png) no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(https://blog.bitso.com/wp-content/uploads/2023/10/cuales-son-las-criptomonedas-mas-populares.png) no-repeat;
     background-size: cover;
     background-position: center;
   }
@@ -70,7 +71,8 @@
   .remember-forgot a:hover{
     text-decoration: underline;
   }
-  .login .btn{
+
+ .btn{
     width: 100%;
     height: 45px;
     background: #fff;
@@ -83,6 +85,7 @@
     color: #333;
     font-weight: 600;
   }
+
   .login .register-link{
     font-size: 14.5px;
     text-align: center;
@@ -96,4 +99,5 @@
   }
   .register-link p a:hover{
     text-decoration: underline;
+    color: aqua;
   }
