--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+*{
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   background-color: #131215;
@@ -16,9 +21,10 @@ body {
 .items {
   border-radius: 5px;
   cursor: pointer;
-  margin: 20px;
-  border: 1px solid white;
+  margin: 15px;
+  border: 2px solid #0d6efd;
   transition: all 0.1s;
+  padding: 8px;
 }
 
 .img-wrapper,
@@ -26,24 +32,30 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .img-wrapper img {
   transform: translateY(0px);
-  transition: all 0.5s;
+  transition: all 0.6s;
 }
 
 .name p {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
   letter-spacing: 3px;
   color: #e5e6f1;
-  transform: translateY(0px);
+  transform: translateY(1px);
   transition: all 0.5s;
 }
 
+.card{
+  background: #131215;
+  color: white;
+}
+
 .items:hover {
-  border: 3px solid #e5e6f1;
+  border: 4px solid #e5e6f1;
 }
 
 .items:hover .name p {
@@ -54,17 +66,21 @@ body {
   transform: translateY(5px);
 }
 
+.nav-link {
+  color: white;
+}
+
 #box-usd{
-  background: rgb(5, 216, 40);
+  color: white;
 }
 
 #box-ars{
-  background: rgb(36, 222, 247);
+  color: white;
 }
 
 #box-btc{
-  background: rgb(238, 226, 59);
+  color: white;
 }
 #box-eth{
-  background: rgb(211, 45, 211);
+  color: white;
 }
