--- a/css/login.css
+++ b/css/login.css
@@ -98,6 +98,7 @@
     font-weight: 600;
   }
   .register-link p a:hover{
+    text-transform: uppercase;
     text-decoration: underline;
-    color: aqua;
+    color: #00aeffe3;
   }
